<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Geodesic</string>


    <string-array name="actions_types">
        <item>Actions</item>
        <item>Direct Problem</item>
        <item>Indirect Problem</item>
        <item>Delete all markers</item>
        <item>Clear pins</item>
        <item>Search Location</item>
        <item>Help</item>
        <item>About</item>
    </string-array>

    <array name="nav_items_icons">
        <item>@drawable/ic_calc</item>
        <item>@drawable/ic_calc</item>
        <item>@drawable/ic_del</item>
        <item>@drawable/ic_clear</item>
        <item>@drawable/ic_location</item>
        <item>@drawable/ic_info</item>
    </array>

    <string name="map_terrain">Terrain</string>
    <string name="map_normal">Normal</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="indirect_geodesic">Indirect Geodesic Problem</string>
    <string name="direct_geodesic">Direct Geodesic Problem</string>
    <string name="drawer_open">Open Geodesic menu</string>
    <string name="drawer_close">Close Geodesic menu</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_about_program">About Program</string>
    <string name="action_settings">Map Types</string>
    <string name="description_refresh">Sync with server</string>
     <string name="description_tool">Delete mode</string>
    <string name="lat1">Latitude1:</string>
    <string name="lon1">Longitude1:</string>
    <string name="lat2">Latitude2:</string>
    <string name="lon2">Longitude2:</string>
    <string name="azi">Azimuth1:</string>
    <string name="azi2">Azimuth2:</string>
    <string name="dist">Distance:</string>
    <string name="result">Result:</string>
    <string name="nonres">No result</string>
    <string name="solve">Solve!</string>
    <string name="clear">Clear</string>
    <string name="delete_markers">Delete markers</string>
    <string name="delete_markers_question">Do you really want to delete all markers?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search_place">Enter a location</string>
    <string name="search">Search</string>
    <string name="dialog_search_location_title">Search a location</string>
    <string name="dialog_search_location_content">Ented a valid location name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="edit_title_dialog">Type info about this point</string>
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="area_empty">Area:0 meters^2</string>
    <string name="perimeter_empty">Perimeter:0 meters</string>

</resources>