<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_tool"
        android:icon="@drawable/ic_del"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/description_tool">
        <menu>
            <group android:checkableBehavior="all" >
                <item
                    android:id="@+id/delete_mode"
                    android:orderInCategory="1"
                    app:showAsAction="never"
                    android:title="@string/description_tool" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:title="@string/description_refresh"/>
    <item
        android:id="@+id/map_menu"
        android:icon="@drawable/ic_layer"
        android:orderInCategory="102"
        app:showAsAction="always"
        android:title="@string/action_settings">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/map_terrain"
                    android:orderInCategory="1"
                    app:showAsAction="ifRoom"
                    android:title="@string/map_terrain"/>
                <item
                    android:id="@+id/map_normal"
                    android:orderInCategory="2"
                    app:showAsAction="ifRoom"
                    android:title="@string/map_normal"/>
                <item
                    android:id="@+id/map_hybrid"
                    android:orderInCategory="3"
                    app:showAsAction="ifRoom"
                    android:title="@string/map_hybrid"/>
            </group>
        </menu>
    </item>

</menu>