<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:orientation="vertical">

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_normal"
        android:hint="@string/title"
        android:imeOptions="actionNext"
        android:singleLine="true"
        app:emptyErrorString="@string/cant_be_empty"/>

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_normal"
        android:hint="@string/description"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:emptyErrorString="@string/cant_be_empty"/>

</LinearLayout>