<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lat1Di"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lat1" />

    <TextView
        android:id="@+id/lon1Di"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lat1Di"
        android:layout_below="@+id/lat1Di"
        android:layout_marginTop="40dp"
        android:text="@string/lon1" />

    <TextView
        android:id="@+id/textAzimuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lon1Di"
        android:layout_below="@+id/lon1Di"
        android:layout_marginTop="41dp"
        android:text="@string/azi" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textAzimuth"
        android:layout_below="@+id/textAzimuth"
        android:layout_marginTop="40dp"
        android:text="@string/dist" />

    <EditText
        android:id="@+id/lat1EditDi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lat1Di"
        android:layout_alignBottom="@+id/lat1Di"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/lon1EditDi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lon1Di"
        android:layout_alignBottom="@+id/lon1Di"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/azimuthDi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textAzimuth"
        android:layout_alignBottom="@+id/textAzimuth"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/distanceDi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textDistance"
        android:layout_alignBottom="@+id/textDistance"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned" />

    <Button
        android:id="@+id/solvebuttonDi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distanceDi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/solve" />

    <TextView
        android:id="@+id/resultDi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/solvebuttonDi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/result"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/resultviewDi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultDi"
        android:layout_centerHorizontal="true"
        android:background="@color/list_item_title"
        android:shadowColor="@color/problem_calc_rezult_shadow"
        android:text="@string/nonres"
        android:textColor="@color/list_divider"
        android:textSize="16sp" />

</RelativeLayout>